--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Perfil corvo</title>
+        <title>Home Corvo</title>
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="./css/css-home/style.css">
         <meta charset="utf-8">
     </head>
 
@@ -13,7 +13,7 @@
         <section class="perfil-descricao">
             <div class="center">
                 <div class="img-perfil-wraper">
-                    <div style="background-image: url('./assets/imagens/imagemPerfil.jpg');" class="img-perfil"></div>
+                    <div style="background-image: url('./assets/imagens/img-Home/imagemPerfil.jpg');" class="img-perfil"></div>
                 <div class="descricao-perfil">
                     <h3>Nome do usuario</h3>
                     <p>#3</p>
@@ -34,18 +34,18 @@
 
         <section id="publicacoes">
             <div style="max-width: 1800px" class="center">
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
+                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
+                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
+                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
+                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
+                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
+                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
+                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
+                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
+                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
+                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
+                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
+                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
                 
             </div>
         </section>
