mechendo dnv pq to emocionado, mas sem muita alteração

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         </form>
     </div>
 
-    <script src="./js/index.js"></script>
-    <script src="./js/funcoes.js"></script>
+    <script src="./js/access.js"></script>
 </body>
 </html>
