--- a/access.html
+++ b/access.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <title>Access</title>
   <link rel="stylesheet" href="./css/access.css">
   <script src="https://kit.fontawesome.com/cf6fa412bd.js" crossorigin="anonymous"></script>
 </head>
@@ -17,25 +18,32 @@
         </div>
 
         <form id="entrar">
-            <input type="text" placeholder="Email" required />
-            <i class="fas fa-envelope iEmail"></i>
-            <input type="password" placeholder="Senha" required />
-            <i class="fas fa-lock iPassword"></i>
+            <div class="email icon">
+                <input type="text" placeholder="Email" required />
+                <i class='bx bxs-envelope'></i>
+            </div>
+            <span id="email_error" style="color: #ff0000;"></span>
+            <div class="senha icon">
+                <input type="password" placeholder="Senha" required />
+                <i class='bx bxs-lock'></i>
+            </div>
+            <span id="email_error" style="color: #ff0000;"></span>
+
             <div class="divCheck">
                 <input type="checkbox" />
                 <span>Lembrar Senha?</span>
             </div>
-            <button type="submit" class="todos">Entrar</button>
+            <button type="submit" class="todos btns">Entrar</button>
         </form>
 
         <form id="cadastrar">
             <input type="text" placeholder="Email" required />
-            <i class="fas fa-envelope iEmail"></i>
+            <i class='bx bxs-envelope'></i>
             <input type="text" placeholder="Usuario" required />
             <i class="fas fa-user uSer"></i>
             <input type="password" placeholder="Senha" required />
             <i class="fas fa-lock iPassword2"></i>
-            <button type="submit" class="todos">Cadastrar </button>
+            <button type="submit" class="todos btns">Cadastrar </button>
         </form>
     </div>
 
