--- a/index.html
+++ b/index.html
@@ -9,16 +9,14 @@
     </head>
 
     <body>
-        <br/><br/>
         <section class="perfil-descricao">
             <div class="center">
                 <div class="img-perfil-wraper">
                     <div style="background-image: url('./assets/imagens/img-Home/imagemPerfil.jpg');" class="img-perfil"></div>
-                <div class="descricao-perfil">
-                    <h3>Nome do usuario</h3>
-                    <p>#3</p>
-                </div><!--descricao-perfil-->
-            
+                <ul class="descricao-perfil">
+                    <li>Nome: Qualquer</li>
+                    <li>Rank: 3º Lugar</li>
+                </ul><!--descricao-perfil-->
         </section><!--perfil-descricao-->
         <section class="feed">
             <div style="max-width: 100%;" class="center">
@@ -46,7 +44,6 @@
                 <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
                 <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
                 <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
-                
             </div>
         </section>
     </body>
