--- a/access.html
+++ b/access.html
@@ -19,16 +19,18 @@
 
         <form id="entrar">
             <div class="email icon">
-                <input type="text" placeholder="Email" required />
+                <input type="text" placeholder="Email" name="email_01" id="email_01" required />
                 <i class='bx bxs-envelope'></i>
             </div>
-            <span id="email_error" style="color: #ff0000;"></span>
-            <div class="senha icon">
-                <input type="password" placeholder="Senha" required />
-                <i class='bx bxs-lock'></i>
-            </div>
-            <span id="email_error" style="color: #ff0000;"></span>
+            <span class="email_error" style="color: #ff0000;"></span>
 
+            <div class="senha icon">
+                <input type="password" placeholder="Senha" name="senha_01" id="senha_01" required />
+                <i class='bx bxs-lock-alt lock-login'></i>
+            </div>
+            <span class="password_error" style="color: #ff0000;"></span>
+
+            <br>
             <div class="divCheck">
                 <input type="checkbox" />
                 <span>Lembrar Senha?</span>
@@ -37,12 +39,22 @@
         </form>
 
         <form id="cadastrar">
-            <input type="text" placeholder="Email" required />
+            <input type="text" placeholder="Email" name="email_02" id="email_02" required />
             <i class='bx bxs-envelope'></i>
-            <input type="text" placeholder="Usuario" required />
+            <span class="email_error" style="color: #ff0000;"></span>
+
+            <input type="text" placeholder="Usuario" name="user" id="user" required />
             <i class="fas fa-user uSer"></i>
-            <input type="password" placeholder="Senha" required />
+            <span id="nome_error" style="color: #ff0000;"></span>
+
+            <input type="password" placeholder="Senha" name="senha_02" id="senha_02" required />
             <i class="fas fa-lock iPassword2"></i>
+            <span class="password_error" style="color: #ff0000;"></span>
+
+            <input type="password" placeholder="Confirme a senha" nome="confirma_senha" id="confirma_senha" required />
+            <i class='bx bxs-lock-alt lock-cadastro'></i>
+            <span id="confirm_password_error" style="color: #ff0000;"></span>
+
             <button type="submit" class="todos btns">Cadastrar </button>
         </form>
     </div>
