add png de neve e tentando add ela na interface
tentando dar a animação do btn congelar quando clicar e por enquanto sem sucesso, alem dos icons que ainda estão bugando com o js

--- a/access.html
+++ b/access.html
@@ -39,21 +39,26 @@
         </form>
 
         <form id="cadastrar">
-            <input type="text" placeholder="Email" name="email_02" id="email_02" required />
-            <i class='bx bxs-envelope'></i>
-            <span class="email_error" style="color: #ff0000;"></span>
-
-            <input type="text" placeholder="Usuario" name="user" id="user" required />
-            <i class="fas fa-user uSer"></i>
-            <span id="nome_error" style="color: #ff0000;"></span>
-
-            <input type="password" placeholder="Senha" name="senha_02" id="senha_02" required />
-            <i class="fas fa-lock iPassword2"></i>
-            <span class="password_error" style="color: #ff0000;"></span>
-
-            <input type="password" placeholder="Confirme a senha" nome="confirma_senha" id="confirma_senha" required />
-            <i class='bx bxs-lock-alt lock-cadastro'></i>
-            <span id="confirm_password_error" style="color: #ff0000;"></span>
+            <div>
+                <input type="text" placeholder="Email" name="email_02" id="email_02" required />
+                <i class='bx bxs-envelope'></i>
+                <span class="email_error" style="color: #ff0000;"></span>
+            </div>
+            <div>
+                <input type="text" placeholder="Usuario" name="user" id="user" required />
+                <i class="fas fa-user uSer"></i>
+                <span id="nome_error" style="color: #ff0000;"></span>
+            </div>
+            <div>
+                <input type="password" placeholder="Senha" name="senha_02" id="senha_02" required />
+                <i class="fas fa-lock iPassword2"></i>
+                <span class="password_error" style="color: #ff0000;"></span>
+            </div>
+            <div>
+                <input type="password" placeholder="Confirme a senha" nome="confirma_senha" id="confirma_senha" required />
+                <i class='bx bxs-lock-alt lock-cadastro'></i>
+                <span id="confirm_password_error" style="color: #ff0000;"></span>
+            </div>
 
             <button type="submit" class="todos btns">Cadastrar </button>
         </form>
