verificação de senha sem a confirmação e usuario prontos ja
falta estilizar os icons e algumas outras ccoisas quando eu descobrir o q e cada coisa...

--- a/access.html
+++ b/access.html
@@ -28,7 +28,6 @@
                 <input type="password" placeholder="Senha" name="senha_01" id="senha_01" required />
                 <i class='bx bxs-lock-alt lock-login'></i>
             </div>
-            <span class="password_error" style="color: #ff0000;"></span>
 
             <br>
             <div class="divCheck">
@@ -52,7 +51,7 @@
             <div>
                 <input type="password" placeholder="Senha" name="senha_02" id="senha_02" required />
                 <i class="fas fa-lock iPassword2"></i>
-                <span class="password_error" style="color: #ff0000;"></span>
+                <span id="password_error_2" style="color: #ff0000;"></span>
             </div>
             <div>
                 <input type="password" placeholder="Confirme a senha" nome="confirma_senha" id="confirma_senha" required />
