--- a/index.html
+++ b/index.html
@@ -10,40 +10,61 @@
 
     <body>
         <section class="perfil-descricao">
-            <div class="center">
-                <div class="img-perfil-wraper">
-                    <div style="background-image: url('./assets/imagens/img-Home/imagemPerfil.jpg');" class="img-perfil"></div>
-                <ul class="descricao-perfil">
-                    <li>Nome: Qualquer</li>
-                    <li>Rank: 3º Lugar</li>
-                </ul><!--descricao-perfil-->
-        </section><!--perfil-descricao-->
+            <img src="./assets/imagens/img-Home/imagemPerfil.jpg" alt="Sua imagem de perfil" class="img-perfil">
+            <ul class="descricao-perfil">
+                <li>Nome: Qualquer</li>
+                <li>Rank: 3º Lugar</li>
+            </ul>
+        </section>
         <section class="feed">
-            <div style="max-width: 100%;" class="center">
+            <div style="max-width: 100%;">
                 <div class="line-feed">
                     <div aba="publicacoes" class="single-line-name">
                         <div style="display: block;" class="line-marcacao"></div>
                         <p style="font-weight: bold;">Corvos</p>
                     </div>
-                    </div>
                 </div>
             </div>
-        </section><!--feed-->
+        </section>
 
         <section id="publicacoes">
-            <div style="max-width: 1800px" class="center">
-                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/img-Home/CorvoGrid.jpg');" class="publicacao-single"></div>
+            <div class="center">
+                <div class="card">
+                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
             </div>
         </section>
     </body>
