--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Perfil corvo</title>
+        <title>Home Corvo</title>
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
         <link rel="stylesheet" href="css/style.css">
@@ -9,44 +9,62 @@
     </head>
 
     <body>
-        <br/><br/>
         <section class="perfil-descricao">
-            <div class="center">
-                <div class="img-perfil-wraper">
-                    <div style="background-image: url('./assets/imagens/imagemPerfil.jpg');" class="img-perfil"></div>
-                <div class="descricao-perfil">
-                    <h3>Nome do usuario</h3>
-                    <p>#3</p>
-                </div><!--descricao-perfil-->
-            
-        </section><!--perfil-descricao-->
+            <img src="assets/imagens/imagemPerfil.jpg" alt="Sua imagem de perfil" class="img-perfil">
+            <ul class="descricao-perfil">
+                <li>Nome: Qualquer</li>
+                <li>Rank: 3º Lugar</li>
+            </ul>
+        </section>
         <section class="feed">
-            <div style="max-width: 100%;" class="center">
+            <div style="max-width: 100%;">
                 <div class="line-feed">
                     <div aba="publicacoes" class="single-line-name">
                         <div style="display: block;" class="line-marcacao"></div>
                         <p style="font-weight: bold;">Corvos</p>
                     </div>
-                    </div>
                 </div>
             </div>
-        </section><!--feed-->
+        </section>
 
         <section id="publicacoes">
-            <div style="max-width: 1800px" class="center">
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                <div style="background-image: url('./assets/imagens/CorvoGrid.jpg');" class="publicacao-single"></div>
-                
+            <div class="center">
+                <div class="card">
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
+                <div class="card">
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                </div>
             </div>
         </section>
     </body>
