--- a/index.html
+++ b/index.html
@@ -28,44 +28,53 @@
         </section>
 
         <section id="publicacoes">
-            <div class="center">
+            <div class="center" id="blur">
                 <div class="card">
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
                 </div>
             </div>
+            <div id="container-info">
+                <div id="info">
+                    <a href="#" onclick="toggle()"><p id="sair">X</p></a>
+                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo">
+                    <h2>Corvo</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                </div>
+            </div>
+           <script src="script.js"></script>
         </section>
     </body>
 </html>
