--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Home Corvo</title>
-        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-        <link rel="stylesheet" href="css/style.css">
-        <meta charset="utf-8">
-    </head>
 
-    <body>
+<head>
+    <title>Home Corvo</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <meta charset="utf-8">
+</head>
+
+<body>
+    <div id="blur">
         <section class="perfil-descricao">
             <img src="assets/imagens/imagemPerfil.jpg" alt="Sua imagem de perfil" class="img-perfil">
             <ul class="descricao-perfil">
@@ -28,53 +30,69 @@
         </section>
 
         <section id="publicacoes">
-            <div class="center" id="blur">
+            <div class="center">
                 <div class="card">
-                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo"
+                            class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo"
+                            class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo"
+                            class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo"
+                            class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo"
+                            class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo"
+                            class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo"
+                            class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo"
+                            class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo"
+                            class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo"
+                            class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo"
+                            class="publicacao-single"></a>
                 </div>
                 <div class="card">
-                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single"></a>
+                    <a href="#" onclick="toggle()"><img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo"
+                            class="publicacao-single"></a>
                 </div>
             </div>
-            <div id="container-info">
-                <div id="info">
-                    <a href="#" onclick="toggle()"><p id="sair">X</p></a>
-                    <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo">
-                    <h2>Corvo</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                </div>
-            </div>
-           <script src="script.js"></script>
-        </section>
-    </body>
+    </div>
+    <div id="container-info">
+        <div id="info">
+            <a href="#" onclick="toggle()" id="sair">
+                <p>X</p>
+            </a>
+            <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo">
+            <h2>Corvo</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+    </div>
+    <script src="script.js"></script>
+    </section>
+</body>
+
 </html>
