--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title>Home Corvo</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
         <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
         <link rel="stylesheet" href="./css/css-home/style.css">
+        
         <meta charset="utf-8">
     </head>
 
