--- a/index.html
+++ b/index.html
@@ -81,17 +81,18 @@
                 </div>
             </div>
     </div>
-    <div id="container-info">
-        <div id="info">
-            <a href="#" onclick="toggle()" id="sair">
-                <p>X</p>
-            </a>
-            <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo">
+    <div class="container-info" id="blur">
+        <div id="info"></div>
             <h2>Corvo</h2>
+            <a href="#" onclick="toggle()"><div class="foto"></a>
+                <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo">
+            </div>
+            <br>
+            <hr>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     </section>
 </body>
 
