--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <head>
         <title>Home Corvo</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-        <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
         <link rel="stylesheet" href="./css/css-home/style.css">
         
@@ -11,63 +13,78 @@
     </head>
 
     <body>
-        <section class="perfil-descricao">
-            <img src="./assets/imagens/img-Home/imagemPerfil.jpg" alt="Sua imagem de perfil" class="img-perfil">
-            <ul class="descricao-perfil">
-                <li>Nome: Qualquer</li>
-                <li>Rank: 3º Lugar</li>
-            </ul>
-        </section>
-        <section class="feed">
-            <div style="max-width: 100%;">
-                <div class="line-feed">
-                    <div aba="publicacoes" class="single-line-name">
-                        <div style="display: block;" class="line-marcacao"></div>
-                        <p style="font-weight: bold;">Corvos</p>
+        <div class="tudo">
+            <section class="perfil-descricao">
+                <div class="alinhando">
+                    <img src="./assets/imagens/img-Home/imagemPerfil.jpg" alt="Sua imagem de perfil" class="img-perfil">
+                    <p><span>Fulano</span></p>
+                </div>
+                    <ul class="descricao-perfil">
+                        <div class="infos">
+                            <li><span>?</span></li>
+                            <li>coletados</li>
+                        </div>
+                        <div class="infos">
+                            <li><span>12</span></li>
+                            <li>totais</li>
+                        </div>
+                        <div class="infos">
+                            <li><span>3º</span></li>
+                            <li>rank</li>
+                        </div>
+                    </ul>
+            </section>
+            <section class="feed">
+                <div style="max-width: 100%;">
+                    <div class="line-feed">
+                        <div aba="publicacoes" class="single-line-name">
+                            <div style="display: block;" class="line-marcacao"></div>
+                            <p style="font-weight: bold;">Corvos</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <section id="publicacoes">
-            <div class="center">
-                <div class="card">
-                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+            <section class="cards">
+                <div class="center">
+                    <div class="card">
+                        <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    </div>
+                    <div class="card">
+                        <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    </div>
+                    <div class="card">
+                        <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    </div>
+                    <div class="card">
+                        <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    </div>
+                    <div class="card">
+                        <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    </div>
+                    <div class="card">
+                        <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    </div>
+                    <div class="card">
+                        <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    </div>
+                    <div class="card">
+                        <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    </div>
+                    <div class="card">
+                        <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    </div>
+                    <div class="card">
+                        <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    </div>
+                    <div class="card">
+                        <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    </div>
+                    <div class="card">
+                        <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
+                    </div>
                 </div>
-                <div class="card">
-                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
-                </div>
-                <div class="card">
-                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
-                </div>
-                <div class="card">
-                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
-                </div>
-                <div class="card">
-                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
-                </div>
-                <div class="card">
-                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
-                </div>
-                <div class="card">
-                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
-                </div>
-                <div class="card">
-                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
-                </div>
-                <div class="card">
-                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
-                </div>
-                <div class="card">
-                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
-                </div>
-                <div class="card">
-                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
-                </div>
-                <div class="card">
-                    <img src="./assets/imagens/img-Home/CorvoGrid.jpg" alt="Imagem de um corvo" class="publicacao-single">
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </body>
 </html>
