Colocando imagem de fundo
Uma imagem com blur, no fundo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </head>
 
     <body>
-        <div class="tudo">
+        <div class="imagem-fundo"></div>
+        <div class="limitar">
             <section class="perfil-descricao">
                 <div class="alinhando">
                     <img src="./assets/imagens/img-Home/imagemPerfil.jpg" alt="Sua imagem de perfil" class="img-perfil">
