tentativas de ajustes no popup
ta um pouco dificil mexer nisso

--- a/index.html
+++ b/index.html
@@ -81,15 +81,17 @@
                 </div>
             </div>
     </div>
-    <div class="container-info" id="blur">
-        <div id="info"></div>
+    <div class="container-info" >
+        <a href="#" onclick="toggle()"><div id="info"></div></a>
             <h2>Corvo</h2>
-            <a href="#" onclick="toggle()"><div class="foto"></a>
+            <div class="foto">
                 <img src="assets/imagens/CorvoGrid.jpg" alt="Imagem de um corvo">
             </div>
             <br>
             <hr>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <br><br>
+            <a href="#" onclick="toggle()"><button type="submit"></button></a>
         </div>
     </div>
     <script src="js/script.js"></script>
