--- a/index.html
+++ b/index.html
@@ -17,23 +17,27 @@
         <div class="limitar">
             <section class="perfil-descricao">
                 <div class="alinhando">
-                    <img src="./assets/imagens/img-Home/imagemPerfil.jpg" alt="Sua imagem de perfil" class="img-perfil">
-                    <p><span>Fulano</span></p>
+                    <div class="imagemPerfil">
+                        <img src="./assets/imagens/img-Home/imagemPerfil.jpg" alt="Sua imagem de perfil" class="img-perfil">
+                    </div>
+                    <div class="infos">
+                        <div class="lista">
+                            <ul class="descricao-perfil">
+                                <div class="infos-coletados">
+                                    <li><span>-/12</span></li>
+                                    <li>coletados</li>
+                                </div>
+                                <div class="infos-coletados">
+                                    <li><span>-</span></li>
+                                    <li>rank</li>
+                                </div>
+                            </ul>
+                        </div>
+                        <div class="nome">
+                            <p><span>Fulano</span></p>
+                        </div>
+                    </div>
                 </div>
-                    <ul class="descricao-perfil">
-                        <div class="infos">
-                            <li><span>?</span></li>
-                            <li>coletados</li>
-                        </div>
-                        <div class="infos">
-                            <li><span>12</span></li>
-                            <li>totais</li>
-                        </div>
-                        <div class="infos">
-                            <li><span>3º</span></li>
-                            <li>rank</li>
-                        </div>
-                    </ul>
             </section>
             <section class="feed">
                 <div style="max-width: 100%;">
