--- a/teste popup com imagem/teste.html
+++ b/teste popup com imagem/teste.html
@@ -8,7 +8,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
 
     <style>
-        .modal {
+        .popup {
             display: none;
             position: fixed;
             z-index: 1;
@@ -21,7 +21,7 @@
             background-color: rgba(0, 0, 0, 0.4);
         }
 
-        .modal-content {
+        .info {
             background-color: #fefefe;
             margin: 15% auto;
             padding: 20px;
@@ -29,51 +29,38 @@
             width: 80%;
         }
 
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-        }
 
-        .close:hover,
-        .close:focus {
-            color: black;
-            text-decoration: none;
-            cursor: pointer;
-        }
     </style>
 </head>
 
 <body>
-    <button id="myBtn">abrir popup</button>
+    <a href="#" onclick="" id="botao"><img src="..//assets/imagens/banana-1218133__340.webp" alt=""></a>
+    <div id="container-info" class="popup">
 
-    <div id="myModal" class="modal">
-
-        <div class="modal-content">
-            <span class="close">&times;</span>
+        <div class="info">
+            <span class="close">&times;</span> 
             <p>teste..</p>
         </div>
 
     </div>
     <script>
-        var modal = document.getElementById("myModal");
+        var popup = document.getElementById("container-info");
 
-        var btn = document.getElementById("myBtn");
+        var btn = document.getElementById("botao");
 
         var span = document.getElementsByClassName("close")[0];
 
         btn.onclick = function () {
-            modal.style.display = "block";
+            popup.style.display = "block";
         }
 
         span.onclick = function () {
-            modal.style.display = "none";
+            popup.style.display = "none";
         }
 
         window.onclick = function (event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
+            if (event.target == popup) {
+                popup.style.display = "none";
             }
         }</script>
 </body>
