--- a/parabens.html
+++ b/parabens.html
@@ -7,23 +7,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> Congratulations </title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="./css/parabens.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+ 
 </head>
 <body>
-    <div class="d-flex ">
-        <div class="position-absolute top-50 start-50 translate-middle">
-            <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-                <img src="..." class="card-img-top" alt="imagem do Parabens">
-                <div class="card-body">
-                    <h5 class="card-title text-center">🎉 Parabens! 🎉</h5>
-                    <p class="card-text text-center">Você Encontrou um corvo.</p>
-                </div>
+    <div id="container">
+        <div class="bloco_principal">
+            <img class="img_teste" src="./img_logo.jfif">
+            <div>
+                <h5>🎉 <span>Parabens!</span> 🎉</h5>
+                <p></p>
             </div>
         </div>
     </div>
-    <script src="./js/alter.js"></script>
+    <!-- <script src="./js/alter.js"></script> -->
 </body>
 
 </html>
