parabens meio q pronta
queria colocar uns confetes q o gabriel tem mas nn consegui sobrepor e

Otavio: o prof pedio pra colocar pena.

ai se realmente quiser pena e com ele pq so no dele da certo isso mas em fim ne

--- a/parabens.html
+++ b/parabens.html
@@ -14,16 +14,24 @@
  
 </head>
 <body>
+    <div id="penas"></div>
+    <!-- <div class="canvas"><canvas id="confete"></canvas></div> -->
     <div id="container">
         <div class="bloco_principal">
-            <img class="img_teste" src="./img_logo.jfif">
+            <h1><span>Nome do Corvo</span></h1>
+            <div class="foto_corvo">
+                <img class="img_teste" src="./corvo_teste.jpg">
+            </div>
             <div>
                 <h5>🎉 <span>Parabens!</span> 🎉</h5>
-                <p></p>
+                <div class="textinho">
+                    <p>Você capturou um corvo!</p>
+                    <span>-/12</span>
+                </div>
             </div>
         </div>
     </div>
-    <!-- <script src="./js/alter.js"></script> -->
-</body>
 
+    <script src="./js/alter.js"></script>
+</body>
 </html>
