arrumando o ambiente pra trabalhar em cima
Proximo passo: fazer manipulação de DOM para fazer essa tela, e depois a de login no mesmo arquivo

--- a/unica/index.html
+++ b/unica/index.html
@@ -5,28 +5,11 @@
     <meta charset="UTF-8">
     <title>Home</title>
     <script src="js/unique.js"></script>
-    <style>
-        audio {
-            display: none;
-        }
-
-        body {
-            width: 100vw;
-            height: 100vh;
-        }
-
-        img {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100vw;
-            height: 100vh;
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 <body>
 
     <audio controls=""  name="media" id="audio">
-        <source src="audio/teste.ogg" type="audio/ogg">
+        <source src="audio/intro.ogg" type="audio/ogg">
     </audio>
     <div id="fundo">
 
