--- a/unica/index.html
+++ b/unica/index.html
@@ -4,18 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <script src="js/unique.js"></script>
+    <script defer src="js/unique.js"></script>
     <link rel="stylesheet" href="css/style.css">
 <body>
 
     <audio controls=""  name="media" id="audio">
         <source src="audio/intro.ogg" type="audio/ogg">
     </audio>
-    <div id="fundo">
 
+    <div id="conteudo">
+        <h1>Pagina que precisa ficar oculta</h1>
+        <form action="GET">
+            <input type="text" name="nome" id="nome">
+            <br><br>
+            <label for="enviar-nome">Label para enviar nome</label>
+            <br><br>
+            <input type="button">
+        </form>
     </div>
-
 </body>
 
 </html>
-
