--- a/parabens.html
+++ b/parabens.html
@@ -23,7 +23,7 @@
                 <img class="img_teste" src="./corvo_teste.jpg">
             </div>
             <div>
-                <h5><span>Parabens!</span></h5>
+                <h5><span>Parabéns!</span></h5>
                 <div class="textinho">
                     <p>Você capturou um corvo!</p>
                 </div>
