--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div id="conteudo">
-        <button onclick="iniciar()">Start</button>
+        <button>Start</button>
     </div>
-    <audio id="audio" controls>
+    <audio id="audio" style="display: none;">
         <source src="audio/intro.ogg" type="audio/ogg">
     </audio>
     <div id="gifContainer">
@@ -18,3 +18,4 @@
     </div>
 </body>
 </html>
+
