--- a/login.html
+++ b/login.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Pagina login</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <script defer ='unique.js'></script>
+    <script src="./js/unique.js" defer></script>
 </head>
 <body>
-    teste
+    aqui será substituida pela página de login
 </body>
 </html>
