--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div id="gifContainer">
         <img id="gif" src="midia/intro.gif" alt="intro" style="display: none;">
     </div>
+    Aqui será exibida a tela em que a pessoa irá clicar no Button e ser redirecionada para o login
 </body>
 </html>
 
